Trying to fix controller